--- a/package.json
+++ b/package.json
@@ -17,10 +17,17 @@
   },
   "homepage": "https://github.com/kheyfets/crisis-response#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.3",
     "mongoose": "^4.10.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "req-flash": "0.0.3",
+    "session": "^0.1.0",
+    "socket.io": "^2.0.2"
   }
 }
